# Messiah

./: .env.example  .gitignore  README.md  docker-compose.yml  init-data.sh  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.ts
.github/workflows/: deployment.yml
cli/: main.py
cli/scan/: __init__.py  scan.py
contract/: Transfer.sol  Trojan.sol
incident/Bybit/: README.md  _app-52c9031bfa03da47.js
n8n_workflow/: scan_js.json
poc/contract/: Trojan.sol
src/: App.tsx  global.css
src/assets/abi/: Trasnfer.json  Trojan.json
src/constants/: chain.ts  contract.ts
src/lib/: utils.ts
